--- a/mbed_app.json
+++ b/mbed_app.json
@@ -1,7 +1,9 @@
 {
     "target_overrides": {
-        "NUCLEO_F446RE": {
-            "target.components_add": ["SD"]
+        "*": {
+            "target.components_add": ["SD"],
+            "target.printf_lib": "std",
+            "platform.stdio-baud-rate": 115200
         }
     }
 }
