--- a/mbed_app.json
+++ b/mbed_app.json
@@ -3,7 +3,8 @@
         "*": {
             "target.components_add": ["SD"],
             "target.printf_lib": "std",
-            "platform.stdio-baud-rate": 115200
+            "platform.stdio-baud-rate": 115200,
+            "drivers.uart-serial-rxbuf-size": 512
         }
     }
 }
