--- a/mbed_app.json
+++ b/mbed_app.json
@@ -4,7 +4,8 @@
             "target.components_add": ["SD"],
             "target.printf_lib": "std",
             "platform.stdio-baud-rate": 115200,
-            "drivers.uart-serial-rxbuf-size": 512
+            "drivers.uart-serial-rxbuf-size": 512,
+            "sd.INIT_FREQUENCY": 100000
         }
     }
 }
