Revisited code, this will be ported to pm2_drivers

--- a/mbed_app.json
+++ b/mbed_app.json
@@ -3,7 +3,9 @@
         "*": {
             "target.components_add": ["SD"],
             "target.printf_lib": "std",
-            "platform.stdio-baud-rate": 115200
+            "platform.stdio-baud-rate": 115200,
+            "drivers.uart-serial-rxbuf-size": 512,
+            "sd.INIT_FREQUENCY": 100000
         }
     }
 }
